--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "moduleResolution": "node",
     "target": "es5",
     "module": "es2015",
-    "lib": ["es2015", "es2016", "es2017", "dom"],
+    "lib": ["es2015", "es2016", "es2017", "dom", "es2019"],
     "strict": true,
     "sourceMap": true,
     "declaration": true,
@@ -13,7 +13,9 @@
     "emitDecoratorMetadata": true,
     "declarationDir": "dist",
     "outDir": "dist/lib",
-    "typeRoots": ["node_modules/@types"]
+    "typeRoots": ["node_modules/@types"],
+    "downlevelIteration": true,
+    "noImplicitAny": false
   },
   "include": ["src"]
 }
